<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping</string>
    <string name="categories">Categories</string>
    <string name="log_in">Log In</string>
    <string name="help">Help</string>
    <string name="my_orders">My Orders</string>
    <string name="hello">Welcome To Shopping</string>
    <string name="help_content">Welcome to @Shopping! In this site you can buy products online. You can search products without being logged in, but you must log in for buying. You can search a product in any moment.</string>
    <string name="log_in_tip">Complete the username and password field to continue</string>
    <string name="username_title">Username: </string>
    <string name="password_title">Password: </string>
    <string name="log_in_submit">Log In</string>
    <string name="select_category">Select one of the following categories:</string>
    <string name="select_subcategory">Select one of the following subcategories:</string>
    <string name="subcategories">Subcategories</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search our products...</string>
    <string name="settings_description">Products in Shopping</string>
    <string name="error_user_password">Wrong user/password</string>
    <string name="created">Created</string>
    <string name="confirmed">Confirmed</string>
    <string name="delivered">Delivered</string>
    <string name="on_way">On Way</string>
    <string name="order_number">Order: </string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="loading_please_wait">Loading. Please Wait...</string>
    <string name="status">Status:</string>
    <string name="confirmed_date">Confirmed Date:</string>
    <string name="total_price">Total Price:</string>
    <string name="title">Title:</string>
    <string name="price">Price:</string>
    <string name="actors">Actors:</string>
    <string name="subtitles">Subtitles:</string>
    <string name="format">Format:</string>
    <string name="run_time">Run Time:</string>
    <string name="categories_empty">Categories not found.</string>
    <string name="subcategories_empty">Subcategories not found.</string>
    <string name="my_orders_empty">Orders not found.</string>
    <string name="products_empty">Products not found.</string>
    <string name="product_empty">Product not found.</string>
    <string name="order_empty">Order not found.</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="order">Order</string>
    <string name="changed">changed.</string>
    <string name="order_update">An order changed!</string>
    <string name="minutes">minutes.</string>
    <string name="minute">minute.</string>
    <string name="search_results">Search results for:</string>
    <string name="total">Total:</string>
    <string name="authors">Authors:</string>
    <string name="publisher">Publisher:</string>
    <string name="published_date">Published Date:</string>
    <string name="language">Language:</string>
    <string name="settings">Settings</string>
    <string name="change_delay">Change notifications delay</string>
    <string name="delay_time">Notification delay</string>
    <string name="settings_update">Settings Updated</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">This application was developed by: Esteban Pintos, Matías De Santi and Federico Di Nucci</string>
    <string name="slogan">See products wherever you are</string>
    <string name="products_found">Products found:</string>
    <string name="support_search">Supports Quick Search Box</string>
    <string name="help_categories">Select one category to see the subcategories.</string>
    <string name="help_subcategories">Select one subcategory to see its products.</string>
    <string name="help_login">Complete with your information to log in.</string>
    <string name="help_orders">Select an order to see more information about it</string>
    <string name="help_order">Here you can see detailed information about the order.</string>
    <string name="help_search">Select a product to see more information about it.</string>
    <string name="help_product">Here you can see detailed information about the product.</string>
    <string name="help_products">Select a product to see more information about it.</string>
    <string name="help_main">Welcome to Shopping, you can search products selecting the categories button or logging in.</string>
    <string name="help_home">By being logged in, you can see products, your orders and their updates.</string>
    <string name="help_settings">Here you can configure some application settings.</string>
    <string name="not_confirmed">No confirmation date.</string>
    <string name="connection_error">Shopping could not connect with the server. Is 3G or Wifi on? Please try again later</string>

    <color name="error_log_in">#FF0000</color>
    <color name="background">#08088A</color>
    <string name="cascade_indicator">&gt;</string>

</resources>